--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,41 @@ body {
   margin-top: 20px;
   font-size: 20px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 300px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 0;
+  border-radius: 4px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 30px;
+}
+
+.modal-content #game-over {
+  font-weight: bold;
+  color: #f00;
+}
+
+.modal-content span {
+  display: flex;
+  flex-direction: row;
+}
