--- a/src/styles.css
+++ b/src/styles.css
@@ -72,3 +72,16 @@ body {
   display: flex;
   flex-direction: row;
 }
+
+.modal-content #btn {
+  margin-top: 10px;
+  border: 0;
+  border-radius: 4px;
+  height: 40px;
+  width: 100px;
+  font-size: 16px;
+  font-weight: bold;
+  background: #aaa;
+  color: #fff;
+  cursor: pointer;
+}
