--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,19 @@
 
 body {
   background: #ccc;
+  overflow: hidden;
+}
+
+body, html {
+  height: 100%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  overflow: hidden;
 }
 
 .container .content {
@@ -23,7 +30,7 @@ body {
   align-items: center;
   background: #fff;
   border-radius: 4px;
-  padding: 15px 30px;
+  padding: 10px 20px;
   margin: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -36,8 +43,7 @@ body {
 }
 
 .container .content a {
-  margin-bottom: 8px;
-  font-size: 18px;
+  font-size: 25px;
   text-decoration: none;
 }
 
